CORE-3269: Re-adjust UI of invitatees' list in event-detail page. r=jianmin

--- a/style/event_detail.css
+++ b/style/event_detail.css
@@ -176,4 +176,8 @@ li.current-calendar div.indicator{
 
 #event-detail-invitees {
   line-height: 2.1rem;
+  width: 100%;
+  word-break: break-all;
+  white-space: pre-line;
+  display: block;
 }
