--- a/style/ui.css
+++ b/style/ui.css
@@ -206,7 +206,7 @@ body[data-path="/day/"] #view-selector > .day > a:active {
   overflow: hidden;
   visibility: hidden;
   /* completely override other views */
-  background-color: #FFFFFF;
+  background-color: var(--background);
   position: absolute;
   top: 0;
   width: 100%;
