--- a/style/event_detail.css
+++ b/style/event_detail.css
@@ -45,6 +45,7 @@ div#event-detail-duration-time {
   top: 20%;
   line-height: 2.1rem;
   font-size: 2.1rem;
+  margin-right: 1.4rem;
 }
 
 div#event-detail-duration-time span {
