--- a/style/calendar.css
+++ b/style/calendar.css
@@ -15,7 +15,7 @@ html, body {
   height: 100%;
   line-height: 100%;
   overflow: hidden;
-  background-color: #000;
+  background-color: var(--color-gs90);
 }
 
 h1,
@@ -32,6 +32,11 @@ section {
 
 section {
   width: 100%;
+}
+
+section[role="region"] {
+  height: cacl(100% - 3rem);
+  padding-top: 3rem;
 }
 
 ol,
