--- a/style/ui.css
+++ b/style/ui.css
@@ -315,6 +315,7 @@ html[dir="rtl"] #advanced-settings-view .account-list .error a {
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 1000;
 }
