Revert "CORE-3467: Add a padding to separate statusbar and main view. r=jianmin"
This reverts commit dd2cc6a9989b9c65c4e0842c9122f63d7f88d946.

--- a/style/calendar.css
+++ b/style/calendar.css
@@ -15,7 +15,7 @@ html, body {
   height: 100%;
   line-height: 100%;
   overflow: hidden;
-  background-color: var(--color-gs90);
+  background-color: #000;
 }
 
 h1,
@@ -32,11 +32,6 @@ section {
 
 section {
   width: 100%;
-}
-
-section[role="region"] {
-  height: cacl(100% - 3rem);
-  padding-top: 3rem;
 }
 
 ol,
