--- a/style/ui.css
+++ b/style/ui.css
@@ -213,10 +213,6 @@ body[data-path="/day/"] #view-selector > .day > a:active {
   height: 100%;
 }
 
-.option-menu-bg {
-  opacity: 0.3;
-}
-
 .cal-chooser-bg {
   opacity: 0.3;
 }
@@ -306,8 +302,9 @@ html[dir="rtl"] #advanced-settings-view .account-list .error a {
 
 #calendar-option-menu-wrapper {
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
+  height: 100%;
   z-index: 1000;
 }
 
