CORE-3587: Adjust toast's height and make its content align-center. r=jianmin

--- a/style/ui.css
+++ b/style/ui.css
@@ -355,4 +355,8 @@ div[contenteditable] {
   transform: translateX(-50%);
   background-color: var(--color-gs85-contrast);
   color: var(--color-gs20-contrast);
+  display: flex;
+  height: 8.2rem;
+  align-items: center;
+  justify-content: center;
 }
