CORE-3471: Change the border color when the li gets focus. r=jianmin

--- a/style/advanced_settings.css
+++ b/style/advanced_settings.css
@@ -58,3 +58,7 @@
   width: 28rem;
   white-space: nowrap;
 }
+
+#advanced-settings-view ul li[focus] span[name="defaultCalendar-locale"] {
+  border-bottom: 0.1rem solid var(--white-color);
+}
