CORE-3861: [Font][Calendar] - Use default font family

--- a/style/calendar.css
+++ b/style/calendar.css
@@ -1,3 +1,7 @@
+:root {
+  font-family: var(--default-font-family);
+}
+
 * {
   -moz-box-sizing: border-box;
   /* By default do not allow any user text selection, only enable for certain
